Boom refactoring